argomanifest/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-agent
spec:
  type: LoadBalancer
  selector:
    app: cs-agent
  ports:
  - protocol: TCP
    port: 4054
    targetPort: 4053
